--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-data.sql
-spring.data.init.mode=ALWAYS
+spring.sql.init.mode=ALWAYS
+spring.jpa.defer-datasouce-initialization=true
